--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,76 @@
+@import './styles/background.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_bold.otf') format('opentype');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_extrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_black.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_boldit.otf') format('opentype');
+  font-weight: 700;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Proxima Nova';
+  src: url('/fonts/proximanova_blackit.otf') format('opentype');
+  font-weight: 900;
+  font-style: italic;
+  font-display: swap;
+}
 
 @layer base {
   html {
     font-family: 'Times New Roman', Times, serif, sans-serif;
   }
 }
+
+:root {
+  --background-color-dark:#252C37;
+  --color-dark-yellow-linear: linear-gradient(270deg, #594915 3.5%, #99802E 47.5%, #FFD54D 100%);
+  --color-light-yellow-linear: linear-gradient(90deg, #FFF 2.5%, #FFEFBA 53%, #6E6E6E 97.5%);
+  --color-grey: rgba(255, 255, 255, 0.2);
+  --font-color-light:#D9D9D9;
+  --font-color-dark:#252C37;
+}
+
